--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
 
 <p>
   <div class="media">
-    <img src="https://avatars.githubusercontent.com/u/4151340" alt="Bede Carroll" class="pull-left">
+    <img src="https://avatars.githubusercontent.com/u/4151340?v=3&s=100" alt="Bede Carroll" class="pull-left">
     <div class="media-body">
       <h4 class="media-heading">Bede Carroll</h4>
     </div>
