More theme work, added CNAME (back to Cloudflare)

--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,5 +1,8 @@
 <h3 class="section-header">
-  Post Footer
+  Share
 </h3>
+<!--
 <div class="well well-sm">
+https://twitter.com/share?text={{ page.title }}%20via%20@{{ page.author.twitter }}&url={{ site.url }}{{ page.url }}
 </div>
+-->
