--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,12 +3,21 @@
 </h3>
 
 <p>
-  <div class="media">
-    <img src="https://avatars.githubusercontent.com/u/4151340?v=3&s=100" alt="Bede Carroll" class="pull-left">
-    <div class="media-body">
-      <h4 class="media-heading">Bede Carroll</h4>
+    <div class="media">
+        <h4 class="media-heading">Bede Carroll</h4>
+        <div class="media-body">
+            <img src="https://avatars.githubusercontent.com/u/4151340?v=3&s=100" alt="Bede Carroll" class="pull-left">
+        </div>
     </div>
-  </div>
 </p>
 
-<p><a href="https://twitter.com/bedecarroll" class="twitter-follow-button" data-show-count="true" data-dnt="true">Follow @bedecarroll</a></p>
+<p>
+    <a href="http://au.linkedin.com/in/bedecarroll">
+        <img src="http://s.c.lnkd.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Bede Carroll's profile on LinkedIn">
+    </a>
+    <br />
+    <a class="github-button" href="https://github.com/bedecarroll" data-count-href="/bedecarroll/followers" data-count-api="/users/bedecarroll#followers">Follow @bedecarroll</a>
+    <br />
+    <a href="https://twitter.com/bedecarroll" class="twitter-follow-button" data-show-count="true" data-dnt="true">Follow @bedecarroll</a>
+    <br />
+</p>
