--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-&copy;{{ site.time | date:"%Y" }}.
+Copyright &copy; {{ site.time | date:"%Y" }} {{ site.author.name }}.
 Built with <a href="http://jekyllrb.com/">Jekyll</a> and
 <a href="https://github.com/ellekasai/shiori">Shiori Theme</a>.
