Missing escape on sitemap.xml

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <!-- Additions to <head> tags go here. -->
 <!-- Sitemap.xml -->
-<link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml"
+<link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary">
