Update blog to use jekyll-feed plugin * Removed feed.xml as this conflicts with the plugin * Update _config.yml to include name and update url to https, enable jekyll-feed plugin * Update head.html to add feed metadata to every page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
 <!-- Sitemap.xml -->
 <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
 
+<!-- jekyll-feed metadata helper -->
+{% feed_meta %}
+
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="{{ site.author.twitter }}">
